--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <title>Homework 11</title>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
   <form class="search-form" id="search-form">
@@ -17,6 +16,9 @@
   />
   <button type="submit" disabled>Search</button>
   </form>
+  <div class="gallery">
+  </div>
+  <div class="loading">LOADING...</div>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
