--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 11</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="css/01-gallery.css" />
   </head>
   <body>
   <form class="search-form" id="search-form">
-  <input
-    type="text"
-    name="searchQuery"
-    autocomplete="off"
-    placeholder="Search images..."
-  />
-  <button type="submit" disabled>Search</button>
+    <input
+      type="text"
+      name="searchQuery"
+      autocomplete="off"
+      placeholder="Search images..."
+    />
+    <button type="submit" disabled>Search</button>
   </form>
   <div class="gallery">
   </div>
-  <div class="loading">LOADING...</div>
-    <script type="module" src="./index.js"></script>
+    <div class="loading">LOADING...</div>
+
+  <script type="module" src="./index.js"></script>
   </body>
 </html>
